underline for footer

--- a/assets/sass/cids-theme/styles/footer.sass
+++ b/assets/sass/cids-theme/styles/footer.sass
@@ -57,7 +57,7 @@ footer#document-footer
     .footer-social,
     .footer-legals
         a
-            text-decoration-color: $color-text
+            text-decoration-color: inherit
             text-underline-offset: 3px
             &::after
                 display: none
