cards pages layout

--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -41,7 +41,16 @@ $h5-font-family: $font-serif
 $h5-size-desktop: pxToRem(32)
 $h5-line-height-desktop: pxToRem(38.4)
 $h5-weight: bold
-$h5-text-transform: normal
+$h5-text-transform: none
+
+// h6 or tab
+$h6-font-family: $font-serif
+$h6-size-desktop: pxToRem(24)
+$h6-size: pxToRem(18)
+$h6-line-height: pxToRem(22.4)
+$h6-line-height-desktop: pxToRem(28.8)
+$h6-weight: normal
+$h6-text-transform: none
 
 // Lead
 $lead-font-family: $font-serif
