--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -33,6 +33,40 @@
                             gap: $spacing-4
                             li + li
                                 margin-top: 0
+    &--cards
+        background: transparent
+        .cards
+            @include in-page-with-or-without-sidebar
+                row-gap: $spacing-6
+            article
+                align-items: flex-start
+                background-color: $color-background-alt
+                padding-bottom: 0
+                .page-title
+                    @include h2
+                .page-title,
+                p:not(.more)
+                    font-family: $font-serif
+                p:not(.more)
+                    @include h6
+                    + .more
+                        margin-top: $spacing-2
+                .more
+                    @extend .btn
+                    &::after
+                        display: none
+                &:hover
+                    .more
+                        border-color: $color-background
+                .media
+                    order: 3
+                    margin-bottom: 0
+                    margin-top: var(--grid-gutter)
+                    @include media-breakpoint-up(desktop)
+                        margin-top: auto
+                        img
+                            margin-top: var(--grid-gutter)
+                            aspect-ratio: 426/282
     // overrided block
     &--large
         .page
