--- a/assets/sass/cids-theme/styles/footer.sass
+++ b/assets/sass/cids-theme/styles/footer.sass
@@ -24,21 +24,18 @@ footer#document-footer
         align-items: flex-start
         display: flex
         flex-direction: column-reverse
-        .nav-social
-            margin-top: $spacing-4
-            a
-                @extend .button-accent
-                --btn-background: #{$color-electric-blue}
-                --btn-hover-background: #{alphaColor($color-electric-blue, 0.85)}
         .footer-social.site-links
             li
                 justify-content: flex-start
                 &::after
                     display: none
+                &.email
+                    margin-top: $spacing-4
+                    a
+                        @extend .button-accent
+                        --btn-background: #{$color-electric-blue}
+                        --btn-hover-background: #{alphaColor($color-electric-blue, 0.85)}
         @include media-breakpoint-up(desktop)
-            margin-right: columns(2)
-        @include media-breakpoint-up(xxl)
-            margin-right: 0
             width: columns(2)
     .footer-partners
         > p
