dark blue pages (wip)

--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -7,6 +7,7 @@ $color-border: rgba(0, 0, 0, 0.30) !default
 $color-selection: $color-background !default
 $color-selection-background: rgba($color-text, .7) !default
 $color-electric-blue: #0258FF
+$deep-blue-background-alt: #13232F
 
 // Grid System 
 $grid-gutter: pxToRem(24)
