--- a/assets/sass/cids-theme/styles/hero.sass
+++ b/assets/sass/cids-theme/styles/hero.sass
@@ -9,8 +9,9 @@
         figure
             margin-top: $spacing-5
             @include media-breakpoint-up(desktop)
-                width: columns(8)
-
+                width: 100%
+                .page__home
+                    width: columns(8)
 .block-summary
     @include in-page-without-sidebar
         .lead
