--- a/assets/sass/cids-theme/theme.sass
+++ b/assets/sass/cids-theme/theme.sass
@@ -2,6 +2,7 @@
 @import "_configuration"
 @import "_fonts"
 @import "_theme/hugo-osuny"
+@import "styles/colors"
 @import "styles/blocks"
 @import "styles/footer"
 @import "styles/header"
