alt color (wip) for dark blue pages

--- a/assets/sass/cids-theme/styles/colors.sass
+++ b/assets/sass/cids-theme/styles/colors.sass
@@ -8,6 +8,7 @@ body
         --color-text: white
         --hero-background-color: #{$color-accent}
         --hero-color: var(--color-text)
+        --color-text-alt: rgba(255,255,255, 0.8)
         // LAYOUT
         .hero
             background: var(--hero-background-color)
