--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -113,3 +113,21 @@ $btn-padding-desktop: pxToRem(14) pxToRem(16)
 // Blocks
 // without sidebar 
 $block-space-y-desktop: space(30)
+
+// key figures
+$block-key_figures-number-font-weight: normal
+
+$block-key_figures-font-size: pxToRem(20)
+$block-key_figures-number-font-size: pxToRem(40)
+
+$block-key_figures-font-size-desktop: $block-key_figures-font-size
+$block-key_figures-number-font-size-desktop: pxToRem(40)
+
+$block-key_figures-font-size-lg: $block-key_figures-font-size
+$block-key_figures-number-font-size-lg: pxToRem(80)
+
+$block-key_figures-font-size-xl: $block-key_figures-font-size
+$block-key_figures-number-font-size-xl: pxToRem(160)
+
+$block-key_figures-font-size-xxl: $block-key_figures-font-size
+$block-key_figures-number-font-size-xxl: pxToRem(160)
