--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -419,3 +419,17 @@
                 gap: var(--grid-gutter)
                 figure
                     margin-right: 0
+
+// datatable
+.block-datatable
+    th
+        border-top: 1px solid var(--color-border)
+    th, 
+    td
+        padding-top: $spacing-3
+        padding-bottom: $spacing-3
+        padding-right: $spacing-3
+    tbody
+        tr:last-child
+            td
+                border-bottom: 1px solid var(--color-border)
