--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -439,3 +439,28 @@
                 padding-top: $spacing-3
                 padding-bottom: $spacing-3
                 padding-right: $spacing-3
+
+// projects
+.projects
+    // add border between rows
+    .projects__section &
+        &--grid
+            @include media-breakpoint-up(desktop)
+                grid-gap: $spacing-5 var(--grid-gutter)
+                .project
+                    padding-bottom: space(10)
+                    &:nth-child(odd)
+                        &::after
+                            content: ''
+                            position: absolute
+                            height: 1px
+                            width: columns(12)
+                            background-color: var(--color-border)
+                            bottom: 0
+            .project-description
+                > div::after
+                    @extend .button
+                    content: 'Discover'
+                    margin-top: $spacing-2
+                    @include media-breakpoint-up(desktop)
+                        margin-top: $spacing-3
