button hover in blocks

--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -104,11 +104,8 @@ $icons-site: map-merge($icons-site, ("external": "\e900"))
 // Buttons
 $btn-min-width-desktop: pxToRem(134)
 $btn-padding-desktop: pxToRem(14) pxToRem(16)
-// $btn-color: white
-// $btn-hover-color: $btn-color
-// $btn-background: #0258FF
-// $btn-hover-background: $color-text
-// $btn-border: none
+$btn-hover-color: white
+$btn-hover-background: $color-accent
 
 // Blocks
 // without sidebar 
