accent color in toc

--- a/assets/sass/cids-theme/styles/toc.sass
+++ b/assets/sass/cids-theme/styles/toc.sass
@@ -62,6 +62,7 @@ body.offcanvas-toc
                         text-decoration: none
                         &.active
                             font-weight: bold
+                            color: $color-electric-blue
 
 .extended-summary
     margin-top: $spacing-6
